Feat: Improve login/register pages with modern design, centered cards and logo

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -79,6 +79,7 @@
 // Pages
 @import "pages/icon-demo";
 @import "pages/authentication";
+@import "pages/auth-custom";
 @import "pages/pricing";
 @import "pages/timeline";
 @import "pages/custom-react";
